--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tagesschrift&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-size: 1.1rem;
+    font-weight: 200;
+    font-size: 1.05rem;
     color: #fff;
     user-select: none;
 }
@@ -39,29 +43,44 @@ body {
 #search-container {
     height: 100px;
     min-height: 100px;
-    background: #ffffff54;
     display: flex;
     justify-content: center;
+
+    /* background: #ffffff54; */
 }
 
 #search-box {
-    background: darkgreen;
     height: 100%;
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    /* background: darkgreen; */
 }
+
+
 
 #searchtext {
     background: none;
-    width: 200px;
+    width: 300px;
     height: 40px;
     padding-left: 10px;
+    border: 2px solid rgb(212, 212, 212);
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 1.2rem;
+    outline: none;
 }
+
+#searchtext:focus {
+    border: 2px solid #0097cf;
+}
+
 
 #searchtext::placeholder {
     color: #ffffffb2;
+    font-weight: 300;
 }
 
 /* ICONS */
@@ -69,14 +88,14 @@ body {
 #icons-container {
     height: 500px;
     min-height: 500px;
-    background: #1759638e;
     display: flex;
     justify-content: center;
-    overflow:hidden
+    overflow:hidden;
+
+    /* background: #1759638e; */
 }
 
 #icon-box {
-    background: green;
     height: 100%;
     width: 60%;
     display: flex;
@@ -84,6 +103,8 @@ body {
     gap: 10px;
     padding: 20px;
     flex-wrap: wrap;
+
+    /* background: green; */
 }
 
 .champ-icon {
@@ -92,6 +113,7 @@ body {
     background: #fff;
     border: 1px solid black;
     border-radius: 5px;
+    object-fit: cover;
 }
 
 #icon-box > img:hover {
@@ -108,20 +130,17 @@ body {
 .detail-container {
     width: 100%;
     height: 0px;
-    background: #bbb;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     overflow: hidden;
-
     
-
+    /* background: #bbb; */
 }
 
 .segment {
-    background: #000;
-    border: 1px solid #fff;
+    /* border: 1px solid #fff; */
     border-width: 1px;;
     width: 60%;
     height: fit-content;
@@ -130,19 +149,25 @@ body {
     justify-content: center;
     align-items: center;
     padding: 20px;
+
+    /* background: #000; */
 }
 
 .segment > p {
-    font-family:'Times New Roman', Times, serif;
+    font-family:'Lora', 'Times New Roman', Times, serif;
     font-size: 2.5rem;
-    font-weight: 400;
+    font-weight: 600;
     letter-spacing: 0.4rem;
 }
 
+.counters > h1 {
+    border-top: 1px solid grey;
+}
+
 h1 {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Tagesschrift', sans-serif;
     font-size: 2rem;
-    font-weight: 300;
+    font-weight: 500;
     width: 100%;
     padding: 10px;
 }
@@ -150,6 +175,12 @@ h1 {
 ul {
     width: 100%;
     padding-left: 20px;
+    list-style-position: inside;
+    line-height: 3rem;
+}
+
+li {
+    padding-bottom: 5px;
 }
 
 /* LINKS */
@@ -162,3 +193,4 @@ ul {
     align-items: center;
     background: darkred;
 }
+
