--- a/style.css
+++ b/style.css
@@ -172,6 +172,8 @@ h1 {
     padding: 10px;
 }
 
+/* FIX REVERSE HANGING INDENT!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
 ul {
     width: 100%;
     padding-left: 20px;
