--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-    font-weight: 200;
-    font-size: 1.05rem;
+    font-weight: 400;
+    font-size: 1.0rem;
     color: #fff;
     user-select: none;
 }
@@ -136,7 +136,7 @@ body {
     align-items: center;
     overflow: hidden;
     
-    /* background: #bbb; */
+    background: #091116;
 }
 
 .segment {
