--- a/style.css
+++ b/style.css
@@ -98,17 +98,26 @@ body {
 
 #icon-box {
     height: 100%;
-    width: 60%;
-    min-width: 400px;
+    width: 1130px;
+    min-width: 380px;
     display: flex;
-    justify-content: flex-start;
+    justify-content:flex-start;
     gap: 10px;
     padding: 20px;
     flex-wrap: wrap;
+    position: relative;
+}
+
+
+#divider {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 90%;
+    transform: translateX(-50%);
+    
     border-bottom: 1px solid rgb(100, 100, 100);
     border-bottom-width: 0px;
-
-    /* flex-shrink: 0; */
 }
 
 .champ-icon {
@@ -144,7 +153,6 @@ body {
 }
 
 .segment {
-    /* border: 1px solid #fff; */
     border-width: 1px;;
     width: 60%;
     height: fit-content;
@@ -154,7 +162,6 @@ body {
     align-items: center;
     padding: 20px;
 
-    /* background: #000; */
 }
 
 .segment > p {
@@ -175,8 +182,6 @@ h1 {
     width: 100%;
     padding: 10px;
 }
-
-/* FIX REVERSE HANGING INDENT!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 ul {
     width: 100%;
